2002-05-23  Roman Hodek  <roman@hodek.net>

	* common/common_gtk.c (check_gtk_widget): Work around a GTK bug:
	if mouse is inside a toolbar button that becomes sensitive (e.g.
	the "Roll Dice" button), you had to move out and in the mouse
	before you could click.

	* server/gnocatan-server-console.c (main): added new option -m to
	set meta server name

	* server/gnocatan-server-gtk.c (build_interface): added new field
	for meta server name

	* server/meta.c: make name of meta server to connect to a global var

	* client/connect.c (create_server_dlg): remove "start server"
	button in create server dialog, and use standard OK/Cancel buttons
	instead. (I finally found out how to do this :)

2002-05-22  Roman Hodek  <roman@hodek.net>

	* client/gui.c: new option to show legend as a page besides the
	map (someone with lack of screen space for the dialog suggested
	that)

	* client/legend.c (legend_create_content): separated out from
	legend_create_dialog so legend page can use same code

	* client/gui.c: two new checkboxes in the settings dialog to
	disable use of colors in the message window and player summary.

	* common/common_gtk.c (log_set_func_message_color_enable): new
	interface to en/disable colors in message window
	(message_window_log_message_string): if msg_colors is false, use
	black

	* client/player.c (player_modify_statistic): obey
	color_summary_enabled

2002-05-21  Roman Hodek  <roman@hodek.net>

	* client/help/C/gnocatan.sgml: Updated with respect to recent
	developments/changes, updated some images to match current
	looking.

	* meta-server/gnocatan-meta-server.c (client_create_new_server):
	Pass full hostname to created servers in environment. Otherwise
	the server will register to the meta-server as running on
	"localhost" and it won't be reachable from outside.

	* debian/gnocatan-ai.menu: Fix typo ('-' too much again)

	* debian/gnocatan-meta-server.conffiles: init.d files is a conffile

2002-05-20  Jeff Breidenbach  <jab@debian.org>
