@@ -23,6 +23,9 @@
 #define BAR_W 40
 #define BAR_S 3
 
+static GtkWidget *histogram_dlg;
+static void histogram_update(void);
+
 /*
  *
  * Non-Gui stuff -- maintain dice histogram state
@@ -32,12 +35,13 @@
 gint dice_histogram(gint cmd, gint roll)
 {
 	static int histogram[] = { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 };
-	//~ static int histogram[] = { 2, 3, 5, 4, 6, 8, 4, 3, 7, 6, 4, 2, 1 };
 
 	assert(roll >= 2 && roll <= 12);
 
 	if (cmd == DICE_HISTOGRAM_RECORD) {
 		histogram[roll]++;
+		if (histogram_dlg && GTK_WIDGET_VISIBLE(histogram_dlg))
+			histogram_update();
 		return 0;
 	} else if (cmd == DICE_HISTOGRAM_RETRIEVE) {
 		return histogram[roll];
@@ -86,29 +90,9 @@ static gint expose_chip_cb(GtkWidget *area,
 }
 
 static gint expose_histogram_cb(GtkWidget *area,
-			GdkEventExpose *event, GdkPixmap *pixmap)
-{
-	static GdkGC *histogram_gc;
-
-	if (area->window == NULL)
-		return FALSE;
-
-	if (histogram_gc == NULL)
-		histogram_gc = gdk_gc_new(area->window);
-
-	gdk_gc_set_fill(histogram_gc, GDK_TILED);
-	gdk_gc_set_tile(histogram_gc, pixmap);
-	gdk_draw_rectangle(area->window, histogram_gc, TRUE, 0, 0,
-			area->allocation.width,
-			area->allocation.height);
-
-	return FALSE;
-}
-
-static gint expose_curve_cb(GtkWidget *area,
 			    GdkEventExpose *event, GdkPixmap *pixmap)
 {
-	static GdkGC *curve_gc;
+	static GdkGC *histogram_gc;
 	gint w = area->allocation.width;
 	gint h = area->allocation.height;
 	gint total = dice_histogram(DICE_HISTOGRAM_TOTAL, 2);
@@ -118,31 +102,42 @@ static gint expose_curve_cb(GtkWidget *area,
 	gint ri = mi + 5*(BAR_W+BAR_S);
 	float by_36, yf;
 	gint low, high;
+	gint i;
 	
-	if(max == 0)
+	if (area->window == NULL)
 		return FALSE;
+	if (max == 0)
+		return FALSE;
+
+	if (histogram_gc == NULL) {
+		histogram_gc = gdk_gc_new(area->window);
+		gdk_gc_set_line_attributes(histogram_gc, 1, GDK_LINE_SOLID,
+					   GDK_CAP_NOT_LAST, GDK_JOIN_MITER);
+		gdk_gc_set_tile(histogram_gc, pixmap);
+	}
+
+	gdk_gc_set_fill(histogram_gc, GDK_TILED);
+	for (i = 2; i <= 12; i++) {
+		gint bh = max ? (float)BAR_H*dice_histogram(DICE_HISTOGRAM_RETRIEVE,
+													i)/max : 0;
+		gdk_draw_rectangle(area->window, histogram_gc, TRUE,
+						   (i-2)*(BAR_W+BAR_S), h-bh,
+						   BAR_W, bh);
+	}
 	
 	by_36 = total*h/max/36;
 	low = h - by_36;
 	high = h - 6*by_36;
-	
-	if (area->window == NULL)
-		return FALSE;
 
-	if (curve_gc == NULL) {
-		curve_gc = gdk_gc_new(area->window);
-		gdk_gc_set_line_attributes(curve_gc, 1, GDK_LINE_SOLID,
-					   GDK_CAP_NOT_LAST, GDK_JOIN_MITER);
-	}
-
-	gdk_gc_set_foreground(curve_gc, &red);
-	gdk_draw_line(area->window, curve_gc, le, low, mi, high);
-	gdk_draw_line(area->window, curve_gc, mi, high, ri, low);
+	gdk_gc_set_fill(histogram_gc, GDK_SOLID);
+	gdk_gc_set_foreground(histogram_gc, &red);
+	gdk_draw_line(area->window, histogram_gc, le, low, mi, high);
+	gdk_draw_line(area->window, histogram_gc, mi, high, ri, low);
 	
-	gdk_gc_set_foreground(curve_gc, &blue);
+	gdk_gc_set_foreground(histogram_gc, &blue);
 	for (yf = 0.0; yf <= 1.0; yf += 0.25) {
 	    gint y = yf*h;
-	    gdk_draw_line(area->window, curve_gc, 0, y, w, y);
+	    gdk_draw_line(area->window, histogram_gc, 0, y, w, y);
 	}
 
 	return FALSE;
@@ -153,43 +148,17 @@ static void add_histogram_bars(GtkWidget *table, Terrain terrain)
 	GtkWidget *area, *align;
 	GtkWidget *label;
 	int i, n, max, total;
-	int set_height;
 	char s[30];
-	const int bar_height = BAR_H;
 	float percentage, f;
 
 	max = dice_histogram(DICE_HISTOGRAM_MAX, 2);
 
-	/* draw the bars */
-
-	for (i = 2; i <= 12; i++) {
-		n = dice_histogram(DICE_HISTOGRAM_RETRIEVE, i);
-		align = gtk_alignment_new(0.5, 1.0, 0.0, 0.0);
-		area = gtk_drawing_area_new();
-		if (max == 0) {
-			set_height = 0;
-		} else {
-			set_height = bar_height * ((float)n/(float)max);
-		}
-		gtk_widget_set_usize(area, BAR_W, set_height);
-		gtk_signal_connect(GTK_OBJECT(area), "expose_event",
-				GTK_SIGNAL_FUNC(expose_histogram_cb),
-				guimap_terrain(terrain));
-		gtk_container_add(GTK_CONTAINER(align), area);
-		gtk_table_attach(GTK_TABLE(table), align,
-				 i - 1, i, 0, 1,
-				 0, (GtkAttachOptions)GTK_FILL,
-				 0, 0);
-		gtk_widget_show(area);
-		gtk_widget_show(align);
-	}
-
-	/* curve area */
+	/* bar and curve area */
 	area = gtk_drawing_area_new();
 	gtk_signal_connect(GTK_OBJECT(area), "expose_event",
-			   GTK_SIGNAL_FUNC(expose_curve_cb),
-			   NULL);
-	gtk_widget_set_usize(area, 11*(BAR_W+BAR_S)-BAR_S, bar_height);
+			   GTK_SIGNAL_FUNC(expose_histogram_cb),
+			   guimap_terrain(terrain));
+	gtk_widget_set_usize(area, 11*(BAR_W+BAR_S)-BAR_S, BAR_H);
 	gtk_table_attach(GTK_TABLE(table), area,
 			 1, 12, 0, 1,
 			 (GtkAttachOptions)GTK_FILL,
@@ -243,13 +212,13 @@ static void add_histogram_bars(GtkWidget *table, Terrain terrain)
 	}
 }
 
+static GtkWidget *frame;
+static GtkWidget *table = NULL;
+
 GtkWidget *histogram_create_dlg()
 {
-	static GtkWidget *histogram_dlg;
 	GtkWidget *dlg_vbox;
 	GtkWidget *vbox;
-	GtkWidget *frame;
-	GtkWidget *table;
 
 	if (histogram_dlg != NULL) {
 		return histogram_dlg;
@@ -274,17 +243,23 @@ GtkWidget *histogram_create_dlg()
 	gtk_widget_show(frame);
 	gtk_box_pack_start(GTK_BOX(vbox), frame, FALSE, TRUE, 0);
 
+	histogram_update();
+
+	gtk_widget_show(histogram_dlg);
+	gnome_dialog_set_close(GNOME_DIALOG(histogram_dlg), TRUE);
+
+	return histogram_dlg;
+}
+
+static void histogram_update(void)
+{
+	if (table)
+		gtk_widget_destroy(table);
 	table = gtk_table_new(3, 14, FALSE);
 	gtk_widget_show(table);
 	gtk_container_add(GTK_CONTAINER(frame), table);
 	gtk_container_border_width(GTK_CONTAINER(table), 5);
 	gtk_table_set_row_spacings(GTK_TABLE(table), 3);
 	gtk_table_set_col_spacings(GTK_TABLE(table), BAR_S);
-
 	add_histogram_bars(table, SEA_TERRAIN);
-
-	gtk_widget_show(histogram_dlg);
-	gnome_dialog_set_close(GNOME_DIALOG(histogram_dlg), TRUE);
-
-	return histogram_dlg;
 }
